[gd_scene load_steps=25 format=3 uid="uid://4qi0af8wtur"]

[ext_resource type="Script" path="res://Characters/NewEnemy.gd" id="1_2juab"]
[ext_resource type="PackedScene" uid="uid://c7mqhit8rrgne" path="res://Characters/PuppetBase.tscn" id="1_fp06q"]
[ext_resource type="PackedScene" uid="uid://cy12nf62sv60i" path="res://Debug/VectorCube.tscn" id="2_6bavj"]
[ext_resource type="PackedScene" path="res://Props/Pistol.tscn" id="4_qy32s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w8tv4"]
radius = 0.333
height = 1.75

[sub_resource type="SphereMesh" id="SphereMesh_w4l3r"]
radius = 0.025
height = 0.05

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_bonou"]
resource_local_to_scene = true
execution_mode = 1
bone_name = "Chest"
bone_index = 2
target_nodepath = NodePath("../../PlayerSeent/Target")
additional_rotation = Vector3(90, 180, 0)

[sub_resource type="SkeletonModificationStack3D" id="SkeletonModificationStack3D_oxx2a"]
resource_local_to_scene = true
enabled = true
strength = 0.9
modification_count = 1
modifications/0 = SubResource("SkeletonModification3DLookAt_bonou")

[sub_resource type="SkeletonModification3DStackHolder" id="SkeletonModification3DStackHolder_vyoks"]
resource_local_to_scene = true
execution_mode = 1
held_modification_stack = SubResource("SkeletonModificationStack3D_oxx2a")

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_7et5h"]
resource_local_to_scene = true
execution_mode = 1
bone_name = "Neck2"
bone_index = 4
target_nodepath = NodePath("../../PlayerSeent/Target")
additional_rotation = Vector3(90, 180, 0)

[sub_resource type="SkeletonModification3DLookAt" id="SkeletonModification3DLookAt_3w3uq"]
resource_local_to_scene = true
execution_mode = 1
bone_name = "Head"
bone_index = 5
target_nodepath = NodePath("../../PlayerSeent/Target")
additional_rotation = Vector3(90, 180, 0)

[sub_resource type="SkeletonModificationStack3D" id="SkeletonModificationStack3D_bpsi1"]
resource_local_to_scene = true
enabled = true
strength = 0.5
modification_count = 2
modifications/0 = SubResource("SkeletonModification3DLookAt_7et5h")
modifications/1 = SubResource("SkeletonModification3DLookAt_3w3uq")

[sub_resource type="SkeletonModification3DStackHolder" id="SkeletonModification3DStackHolder_kawsy"]
resource_local_to_scene = true
execution_mode = 1
held_modification_stack = SubResource("SkeletonModificationStack3D_bpsi1")

[sub_resource type="SkeletonModificationStack3D" id="SkeletonModificationStack3D_bw704"]
resource_local_to_scene = true
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification3DStackHolder_vyoks")
modifications/1 = SubResource("SkeletonModification3DStackHolder_kawsy")

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_c2iyk"]

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_lsdtn"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tt8hv"]
animation = &"Idle_Lower"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_28xjr"]
animation = &"RunForwardPistol_Upper"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8wbr2"]
animation = &"RunForwardSlapper_Upper"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ltn1p"]
animation = &"RunForward_Lower"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0jwk6"]
animation = &"IdleSlapper_Upper"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_3n2f6"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_jcwaj"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_rxdsj"]
graph_offset = Vector2(-337.117, 182.344)
nodes/Add2/node = SubResource("AnimationNodeAdd2_lsdtn")
nodes/Add2/position = Vector2(480, 60)
"nodes/Add2 2/node" = SubResource("AnimationNodeAdd2_c2iyk")
"nodes/Add2 2/position" = Vector2(480, 400)
nodes/Animation/node = SubResource("AnimationNodeAnimation_0jwk6")
nodes/Animation/position = Vector2(220, 20)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_tt8hv")
"nodes/Animation 2/position" = Vector2(260, 140)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_28xjr")
"nodes/Animation 3/position" = Vector2(-20, 280)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_8wbr2")
"nodes/Animation 4/position" = Vector2(-40, 400)
"nodes/Animation 5/node" = SubResource("AnimationNodeAnimation_ltn1p")
"nodes/Animation 5/position" = Vector2(0, 520)
nodes/IdleRun/node = SubResource("AnimationNodeBlend2_3n2f6")
nodes/IdleRun/position = Vector2(717, 146)
nodes/PistolSlapper/node = SubResource("AnimationNodeBlend2_jcwaj")
nodes/PistolSlapper/position = Vector2(280, 300)
nodes/output/position = Vector2(980, 200)
node_connections = [&"output", 0, &"IdleRun", &"Add2", 0, &"Animation", &"Add2", 1, &"Animation 2", &"Add2 2", 0, &"PistolSlapper", &"Add2 2", 1, &"Animation 5", &"IdleRun", 0, &"Add2", &"IdleRun", 1, &"Add2 2", &"PistolSlapper", 0, &"Animation 3", &"PistolSlapper", 1, &"Animation 4"]

[node name="NewEnemy" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_2juab")

[node name="NavAgent" type="NavigationAgent3D" parent="."]

[node name="CharacterCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_w8tv4")

[node name="PlayerSeent" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)
target_position = Vector3(0, 0, -1)
collision_mask = 3

[node name="VectorCube" parent="PlayerSeent" instance=ExtResource("2_6bavj")]
visible = false

[node name="Target" type="Node3D" parent="PlayerSeent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)
visible = false

[node name="Mesh" type="MeshInstance3D" parent="PlayerSeent/Target"]
mesh = SubResource("SphereMesh_w4l3r")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65, 0)

[node name="Camera3d" type="Camera3D" parent="Head"]

[node name="Puppet" parent="." instance=ExtResource("1_fp06q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.168096)

[node name="Skeleton3D" parent="Puppet" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0571644)
bones/1/position = Vector3(-5.56474e-09, 0.910206, -0.0641973)
bones/1/rotation = Quaternion(2.89313e-08, 0.987396, -0.15827, -1.92464e-07)
bones/2/rotation = Quaternion(-0.138683, 0.000969841, 0.00328821, 0.990331)
bones/4/rotation = Quaternion(0.0900291, 0.0128223, 0.0189671, 0.995676)
bones/5/rotation = Quaternion(-0.0121329, 5.5334e-05, -0.00130391, 0.999926)
bones/7/rotation = Quaternion(0.552772, -0.210545, -0.661572, 0.460908)
bones/8/rotation = Quaternion(0.305867, 0.034683, -0.0595563, 0.949576)
bones/10/rotation = Quaternion(0.394354, 0.285609, 0.706026, 0.514237)
bones/11/rotation = Quaternion(0.512896, -0.0311209, 0.0998675, 0.852054)
bones/12/position = Vector3(-0.0215427, 0.34247, 0.316004)
bones/12/rotation = Quaternion(-0.453088, -0.202597, -0.537101, 0.682047)
bones/15/rotation = Quaternion(-0.136752, -0.0311937, 0.100512, 0.984999)
bones/16/rotation = Quaternion(-0.352684, -0.0473181, -0.50171, 0.788455)
bones/21/rotation = Quaternion(0.00413199, -0.168782, -0.154747, 0.973421)
bones/22/rotation = Quaternion(-0.394365, 0.0948887, -0.480339, 0.777655)
bones/27/rotation = Quaternion(-0.105765, -0.0530162, -0.0569688, 0.991341)
bones/28/rotation = Quaternion(0.54355, 0.313859, -0.158126, 0.762261)
bones/29/rotation = Quaternion(0.484487, 0.223039, -0.20456, 0.820781)
bones/30/position = Vector3(-0.049797, 0.3518, 0.309254)
bones/30/rotation = Quaternion(-0.459099, 0.0620999, 0.471854, 0.75015)
bones/33/rotation = Quaternion(-0.244851, 0.183849, 0.0430019, 0.950999)
bones/34/rotation = Quaternion(-0.38701, -0.00258387, 0.473995, 0.790914)
bones/39/rotation = Quaternion(-0.0280185, 0.194239, 0.268623, 0.943042)
bones/40/rotation = Quaternion(-0.46123, -0.0717648, 0.471175, 0.748405)
bones/45/rotation = Quaternion(-0.209561, -0.246504, 0.40331, 0.855956)
bones/46/rotation = Quaternion(-0.194714, -0.552202, 0.810654, 0.000186902)
bones/47/rotation = Quaternion(0.143826, 0.381354, -0.761682, 0.503709)
bones/49/rotation = Quaternion(-0.31239, -0.276255, -0.597723, 0.684706)
bones/50/rotation = Quaternion(-0.293254, 0.0033059, 0.449291, 0.843877)
bones/52/rotation = Quaternion(-0.572649, -0.187555, 0.160162, 0.781821)
bones/53/rotation = Quaternion(-0.13231, -0.00380112, -0.202711, 0.970252)
bones/54/position = Vector3(-0.11946, 0.356024, -0.435739)
bones/54/rotation = Quaternion(0.682382, -0.323446, -0.526919, 0.389993)
bones/56/rotation = Quaternion(0.107866, -0.0345488, -0.415738, 0.902404)
bones/60/position = Vector3(-0.324582, 0.962178, -0.428659)
bones/60/rotation = Quaternion(0.565929, -0.423939, -0.423939, 0.565929)
bones/61/position = Vector3(0.134058, 0.227185, 0.314076)
bones/61/rotation = Quaternion(0.381723, 0.540211, 0.353842, 0.661254)
bones/63/rotation = Quaternion(0.113548, -0.0108685, 0.507806, 0.853886)
bones/67/position = Vector3(0.177047, 0.971755, -0.536806)
bones/67/rotation = Quaternion(0.565929, 0.423939, 0.423939, 0.565929)
modification_stack = SubResource("SkeletonModificationStack3D_bw704")

[node name="AnimationTree" type="AnimationTree" parent="Puppet"]
tree_root = SubResource("AnimationNodeBlendTree_rxdsj")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Add2/add_amount = 1.0
"parameters/Add2 2/add_amount" = 1.0
parameters/IdleRun/blend_amount = 1.0
parameters/PistolSlapper/blend_amount = 0.0

[node name="BoneAttachment3d" type="BoneAttachment3D" parent="Puppet"]
transform = Transform3D(0.842101, 0.332172, 0.424885, -0.479347, 0.0999311, 0.871917, 0.247167, -0.93791, 0.243378, 0.0500198, 1.51509, -0.473225)
bone_name = "Hand1.R"
bone_idx = 31
use_external_skeleton = true
external_skeleton = NodePath("../Skeleton3D")

[node name="Pistol" parent="Puppet/BoneAttachment3d" instance=ExtResource("4_qy32s")]
transform = Transform3D(0.840861, -0.469476, 0.269341, 0.334602, 0.0597435, -0.940464, 0.425434, 0.880922, 0.207324, -0.0389215, 0.0973543, 0.000523806)
is_automatic = null

[node name="Label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
visible = false
ignore_occlusion_culling = true
billboard = 1
double_sided = false
no_depth_test = true
render_priority = 1
text = "Enemy"
outline_size = 6

[editable path="Puppet"]
